AB#87 Add Login-page/form/feature
Fixes AB#223

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -1,5 +1,21 @@
 {
+  "LOGIN": "Log in",
   "MENU": "Menu",
   "HOME": "Home",
-  "PROGRAMS": "All Programs"
+  "PROGRAMS": "All Programs",
+  "page": {
+    "login": {
+      "form": {
+        "email": {
+          "label": "E-mail"
+        },
+        "password": {
+          "label": "Password"
+        },
+        "submit": {
+          "label": "Log in"
+        }
+      }
+    }
+  }
 }
