--- a/interfaces/HO-Portal/src/assets/i18n/nl.json
+++ b/interfaces/HO-Portal/src/assets/i18n/nl.json
@@ -1,5 +1,21 @@
 {
+  "LOGIN": "Inloggen",
   "MENU": "Hoofdmenu",
   "HOME": "Thuis",
-  "PROGRAMS": "Alle Programma's"
+  "PROGRAMS": "Alle Programma's",
+  "page": {
+    "login": {
+      "form": {
+        "email": {
+          "label": "E-mail"
+        },
+        "password": {
+          "label": "Wachtwoord"
+        },
+        "submit": {
+          "label": "Inloggen"
+        }
+      }
+    }
+  }
 }
