AB#511 basic select-language setup incl. translate

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -1,5 +1,10 @@
 {
   "WORLD": "World",
   "PERSONAL": "You",
-  "DEVICE": "Device"
+  "DEVICE": "Device",
+  "personal": {
+    "select-language": {
+      "introduction": "Welcome to 121. Please select your language."
+    }
+  }
 }
