Added notification toast after reveiving an update

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -1,5 +1,10 @@
 {
-  "WORLD": "World",
-  "PERSONAL": "You",
-  "DEVICE": "Device"
+    "WORLD": "World",
+    "PERSONAL": "You",
+    "DEVICE": "Device",
+    "TOAST": {
+        "credential": "Credential received",
+        "inclusion": "Inclusion status received",
+        "close": "close"
+    }
 }
