AB#511 added radio-options for select-language

--- a/interfaces/PA-App/src/assets/i18n/nl.json
+++ b/interfaces/PA-App/src/assets/i18n/nl.json
@@ -1,5 +1,10 @@
 {
   "WORLD": "Wereld",
   "PERSONAL": "Persoonlijk",
-  "DEVICE": "Apparaat"
+  "DEVICE": "Apparaat",
+  "personal": {
+    "select-language": {
+      "introduction": "Welkom bij 121. Selecteer alstublieft een taal."
+    }
+  }
 }
