--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -6,11 +6,17 @@
     "select-language": {
       "introduction": "Welcome to 121. Please select your language.",
       "result": "Thank you. You have selected"
+    },
+    "get-info": {
+      "introduction": "Before we start, would you like to know more about 121?",
+      "option1": "Tell me about 121",
+      "option2": "No, I already know",
+      "option3": "Later"
     }
   },
   "TOAST": {
-      "credential": "Credential received",
-      "inclusion": "Inclusion status received",
-      "close": "close"
+    "credential": "Credential received",
+    "inclusion": "Inclusion status received",
+    "close": "close"
   }
 }
