--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -15,6 +15,11 @@
       "option1": "Tell me about 121",
       "option2": "No, I already know",
       "option3": "Later"
+    },
+    "tell-needs": {
+      "introduction": "In order to help you as best as possible, please tell us what your needs are.",
+      "input-placeholder": "My needs are...",
+      "submit": "Submit needs"
     }
   },
   "TOAST": {
