--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -50,8 +50,14 @@
     },
     "select-country": {
       "introduction": "The next step is to select your location, so we can show you programs for that location.",
-      "step3": "Step 3: My location is:",
+      "step3": "Step 3: Select your location:",
       "conclusion": "Thank you, you have selected"
+    },
+    "select-program": {
+      "introduction": "You can now select a program. We'll show you programs from",
+      "step4": "Step 4: Select a program:",
+      "info-button": "Tell me about programs",
+      "program": "Program"
     }
   },
   "TOAST": {
