--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -9,6 +9,12 @@
       "username-placeholder": "Username...",
       "password-placeholder": "Password...",
       "login-button": "Log in"
+    },
+    "main-menu": {
+      "introduction": "You have access to the following actions. Please select one.",
+      "menu-option1": "View appointments",
+      "menu-option2": "Check PA's claims",
+      "menu-option3": "Change password"
     }
   },
   "shared": {
