AB#547 login-component connected to endpoint

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -5,10 +5,13 @@
   "personal": {
     "login": {
       "introduction": "Welcome to 121. Please log in below.",
-      "login": "Log in",
-      "username-placeholder": "Username...",
+      "login": "Log-in form",
+      "email-placeholder": "Email...",
       "password-placeholder": "Password...",
-      "login-button": "Log in"
+      "login-button": "Log in",
+      "wrong-credentials": "Your email and/or password are not recognized. Please try again.",
+      "logout-button": "Log out",
+      "conclusion": "You are succesfully logged in."
     },
     "main-menu": {
       "introduction": "You have access to the following actions. Please select one.",
