AB#551 connect get-appointments to endpoint (+jwt)

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -20,7 +20,10 @@
       "menu-option3": "Change password"
     },
     "view-appointments": {
-      "introduction": "For the following timeslots appointments have been scheduled. Select a timeslot to see details."
+      "introduction": "For the following timeslots appointments have been scheduled. Select a timeslot to see details.",
+      "timeslot": "Timeslot",
+      "submit-button": "See appointments",
+      "appointments": "These are the appointments for the chosen timeslot:"
     }
   },
   "shared": {
