Convert CreatePassword-component to PersonalComponent
+ add extra emphasis to the confirmation step

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -33,11 +33,11 @@
     },
     "create-password": {
       "introduction": "To create a Digital ID you need to complete the following steps.",
-      "step1": "Step 1: Create your password",
+      "step1": "Step 1: Create your password.",
       "info-password": "Tell me about passwords",
-      "create-password": "Create password...",
-      "confirm-password": "Confirm password...",
-      "submit-password": "Create your password",
+      "create-password": "Create password:",
+      "confirm-password": "Confirm password:",
+      "submit-password": "Create my password",
       "conclusion": "Great! You have created a password."
     },
     "identity-form": {
