Rename notifications-related messages

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -79,7 +79,7 @@
       "program": "Program"
     }
   },
-  "TOAST": {
+  "notification": {
     "credential": "Credential received",
     "inclusion": "Inclusion status received",
     "close": "close"
