AB#597 validate-program component

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -35,7 +35,14 @@
       "postpone-button": "Postpone verification",
       "confirm-button": "Issue Identity Credential",
       "refresh-button": "Refresh information",
-      "conclusion": "The Digital ID has been created. As such there is no need, and thus no possibility, for you to see the PA's personal information any more."
+      "conclusion": "The Digital ID has been created. As such there is no need, and thus no possibility, for you to see the PA's personal information any more here."
+    },
+    "validate-program": {
+      "introduction": "Thank you. Below you see the PA's information for the specific program. Check it and if correct, confirm it. If not correct, tell the PA to change and resend it.",
+      "postpone-button": "Postpone verification",
+      "confirm-button": "Issue Program Credential",
+      "refresh-button": "Refresh information",
+      "conclusion": "The Program credential has been created. As such there is no need, and thus no possibility, for you to see the PA's personal information any more here."
     }
   },
   "shared": {
