--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -55,17 +55,15 @@
       "more-info-digital-id": "More about Digital ID's"
     },
     "select-appointment": {
-      "introduction1": "Thank you. We have received your request. To process your request we need to verify your information for both the Digital ID and the Program.",
-      "introduction2": "For this you need to make an appointment",
-      "stepX": "Step X: Select a timeslot:",
-      "info-button": "Tell me about this meeting",
-      "timeslot": "Timeslot",
-      "conclusion1": "Thank you. You have selected the following timeslot:",
-      "conclusion2": "Please ensure you have the following documents:",
-      "confirm": "Confirm this meeting time.",
-      "info-documents": "Tell me about the documents",
-      "option1": "Confirm meeting time",
-      "option2": "Change meeting time",
+      "introduction": "To make an appointment, select a timeslot:",
+      "thanks-repeat": "Thank you. You have selected the following timeslot:",
+      "documents": "Please ensure you have the following documents:",
+      "from": "From",
+      "till": "Till",
+      "at": "At",
+      "more-info-documents": "More about these documents",
+      "confirm": "Confirm meeting time",
+      "change": "Change meeting time",
       "conclusion": "Thank you, your verification meeting is confirmed."
     },
     "select-country": {
