Disable input after submit (for select-country)
+ improve translation-handling

Related AB#592

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -69,7 +69,7 @@
     "select-country": {
       "introduction": "The next step is to select your location, so we can show you programs for that location.",
       "step3": "Step 3: Select your location:",
-      "conclusion": "Thank you, you have selected {{country}}."
+      "conclusion": "Thank you, you have selected <strong>{{country}}</strong>."
     },
     "select-language": {
       "introduction": "Please select your language.",
