AB#649 read QR-code as object with did+programId

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -29,7 +29,8 @@
     "scan-qr": {
       "introduction": "Now scan the QR-code of the PA to identify him/her in the system.",
       "scan-button": "Scan QR-code",
-      "conclusion": "Thank you. You have scanned the PA with DID"
+      "conclusion1": "Thank you. You have scanned the PA with DID",
+      "conclusion2": "applying for program"
     },
     "validate-identity": {
       "introduction": "Below you see the PA's information for the Digital ID. Check it and if correct, confirm it. If not correct, tell the PA to change and resend it.",
