AB#650 PA-app: get+store credential

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -83,6 +83,10 @@
       "introduction": "You can now select a program.",
       "more-info-programs": "More about programs",
       "program": "Program"
+    },
+    "store-credential": {
+      "received": "Credential is received. (TO DO: this should only appear after credential is received.)",
+      "stored": "Credential is stored."
     }
   },
   "notification": {
