Added submitting of proof and inclusion status to PA-app AB#380

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -89,9 +89,9 @@
             "stored": "Credential is stored."
         },
         "handle-proof": {
-            "creating": "Sending your data to apply for program",
-            "inclusion-status-postive": "You have been included in this program",
-            "inclusion-status-negative": "You have not been included in this program: "
+            "creating": "Sending your data to apply for program.",
+            "inclusion-status-postive": "You have been included in this program.",
+            "inclusion-status-negative": "You have not been included in this program."
         }
     },
     "notification": {
