Remove distracting labels

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
-  "WORLD": "World",
+  "WORLD": "",
   "PERSONAL": "You",
-  "DEVICE": "Device",
+  "DEVICE": "",
   "personal": {
     "identity-form": {
       "introduction": "Now we need some additional information about you.",
