--- a/interfaces/PA-App/src/assets/i18n/nl.json
+++ b/interfaces/PA-App/src/assets/i18n/nl.json
@@ -1,7 +1,7 @@
 {
-  "WORLD": "Wereld",
+  "WORLD": "",
   "PERSONAL": "Persoonlijk",
-  "DEVICE": "Apparaat",
+  "DEVICE": "",
   "personal": {
     "select-language": {
       "introduction": "Welkom bij 121. Selecteer alstublieft een taal."
